Changes to introduction after Maltoni's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@370 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -730,6 +730,12 @@
 	note = "[Online; accessed 24-April-2015]"
 }
 
+@misc{ForumSVN,
+	title = {{SVN repository for model, input and parameter cards for models considered in the ATLAS/CMS Dark Matter Forum studies}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/}",
+	year = {2015}, 
+	note = "[Online; accessed 13-June-2015]"
+}
 
 @misc{ForumSVN_DMV,
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of vector mediator}},
@@ -2577,4 +2583,11 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
       primaryClass   = "hep-ph",
       reportNumber   = "IPHC-PHENO-06",
       SLACcitation   = "%%CITATION = ARXIV:1206.1599;%%",
+}
+
+@misc{HEPData,
+	title = {{The Durham HepData Project}},
+	howpublished = "\url{http://hepdata.cedar.ac.uk/abouthepdata}",
+	year = {2015}, 
+	note = "[Online; accessed 13-June-2015]"
 }
