--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -123,10 +123,10 @@
  
 \pagebreak
 
-%\chapter{Introduction}
-%\label{sec:Introduction}
-%
-%\input{tex/Introduction.tex}
+\chapter{Introduction}
+\label{sec:Introduction}
+
+\input{tex/Introduction.tex}
 
 \chapter{\texorpdfstring{Simplified models for all \MET+X analyses}{Simplified models for all MET+X analyses}}
 \label{subsec:MonojetLikeModels}
