--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -5,23 +5,23 @@
 {$LastChangedBy$}
 \svnid{$Id$}
 
-Dark matter\sidenote{Many theories of physics beyond the Standard Model predict the existence
+Dark matter (DM) \sidenote{Many theories of physics beyond the Standard Model predict the existence
 of stable, neutral, weakly-interacting and massive particles that are
-putative dark matter candidates. In the following, we refer to such
-matter as dark matter, even though the observation of such matter at a collider
+putative Dark Matter candidates. In the following, we refer to such
+matter as Dark Matter, even though the observation of such matter at a collider
 could only establish that it is neutral, weakly-interactive, massive and stable
 on the distance-scales of tens of meters.} has not yet been observed in particle physics experiments, and
 there is not yet any evidence for non-gravitational interactions
-between dark matter and Standard Model particles.  If such
-interactions exist, particles of dark matter could be produced
-at the LHC. Since dark matter particles themselves do not produce signals
+between Dark Matter and Standard Model particles.  If such
+interactions exist, particles of Dark Matter could be produced
+at the LHC. Since Dark Matter particles themselves do not produce signals
 in the LHC detectors, one way to observe them is when they are produced in association
 with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
-%% so simple pair-production of dark matter particles, for example,
+%% so simple pair-production of Dark Matter particles, for example,
 %% would
 %% not be visible.
 %% However, there are different mechanisms by which a
-%% could be produced in association with dark matter.
+%% could be produced in association with Dark Matter.
 Such reactions, which are
 observed at colliders as particles or jets recoiling against an invisible state, are
 called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}, 
@@ -29,7 +29,7 @@ where \MET is the missing transverse momentum observable in the detector.
 
 
 
-Early Tevatron and LHC Run-1 searches for \MET{}+X signatures at CDF
+Early Tevatron and LHC Run-1 searches for \MET{}+X signatures at 
 CDF~\cite{Aaltonen:2012jb}, 
 ATLAS~\cite{Aad:2015zva,Aad:2014tda,ATLAS:2014wra,Aad:2014vka,Aad:2013oja,Aad:2014wza,Aad:2014vea,ATL-PHYS-PUB-2014-007}
 and
@@ -37,21 +37,22 @@ CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatrya
 employed a basis of contact interaction operators in effective field
 theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to calculate the
 possible signals. %\Todo{Check these references here}
-These EFTs assume that production of dark matter takes place through a
+These EFTs assume that production of Dark Matter takes place through a
 contact interaction involving a quark-antiquark pair, or two gluons,
-and two dark matter particles.  In this case, the missing energy
+and two Dark Matter particles.  In this case, the missing energy
 distribution of the signal is determined by the nature and the mass of
-the dark matter particles and the Lorentz structure of the
+the Dark Matter particles and the Lorentz structure of the
 interaction. Only the overall production rate is a free parameter to
 be constrained or measured.  Provided that the contact interaction
 approximation holds, these EFTs provide a straightforward way to
 compare the results from different collider searches with non-collider
-searches for dark matter.  
+searches for Dark Matter.  
 
 The EFT describes the case when the mediator of the interaction between SM and DM particles are very heavy; 
-if this is not the case, models that explicitly include these mediators are needed~\cite{Goodman:2010yf,Shoemaker:2011vi,Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
+if this is not the case, models that explicitly include these mediators are 
+needed~\cite{Goodman:2010yf,Shoemaker:2011vi,Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
 Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}
-of dark matter production were constructed, including particles and interactions beyond the SM.
+of Dark Matter production were constructed, including particles and interactions beyond the SM.
 These models can be used consistently at LHC energies, and provide
 an extension to the EFT approach. 
 Many proposals for such models have emerged (see, for example
@@ -63,11 +64,11 @@ Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:20
 %QCD singlets and do not decay to hard leptons are relatively
 %weak (see, for example, limits on dijet resonances for weakly-coupled
 %theories).
-%Such particles can mediate reactions that produce dark matter
+%Such particles can mediate reactions that produce Dark Matter
 %particles.
 At the LHC, the kinematics of mono-X reactions occurring via a \tev-scale mediator can differ substantially from the prediction of the contact
 interaction. The mediator may also produce qualitatively different signals, such as decays back into Standard Model particles. 
-Thus, appropriate simplified models are thus an important component of the design, optimization, and interpretation of dark matter searches at ATLAS and CMS.
+Thus, appropriate simplified models are an important component of the design, optimization, and interpretation of Dark Matter searches at ATLAS and CMS.
 This has already been recognized in the CDF, ATLAS and CMS searches quoted above, where both EFT and selected simplified model
 results are presented. 
 
@@ -81,21 +82,21 @@ September 2014~\cite{DMatLHCProceedings}.
 Following the DM@LHC workshop, ATLAS and CMS organized a forum, called the~\textit{ATLAS-CMS Dark
 Matter Forum}, to form a consensus on the use of simplified models
 and EFTs for Run-2 with the participation of experts on
-theories of dark matter. This is the final report of that forum.
+theories of Dark Matter. This is the final report of that forum.
 
 One of the guiding principles of this report is to channel the efforts
 of the ATLAS and CMS collaborations towards a minimal basis of dark
 matter models that should influence the design of the early Run-2
 searches. At the same time, a thorough survey of realistic collider
-signals of dark matter is a crucial input to the overall design of the
+signals of Dark Matter is a crucial input to the overall design of the
 search program.
 
 The goal of this report is such a survey, though confined within some
 broad assumptions and focused on benchmarks for kinematically-distinct
 signals which are most urgently needed. As far as time and resources
 have allowed, the assumptions have been carefully motivated by
-theoretical consensus and comparisons of simulations. But, to achieve a
-true consensus in only a few months before the start of Run-2, it was
+theoretical consensus and comparisons of simulations. But, to achieve such a 
+consensus in only a few months before the start of Run-2, it was
 important to restrict the scope and timescale to the following:
 
 \begin{enumerate}
@@ -105,9 +106,11 @@ important to restrict the scope and timescale to the following:
   experimental results are provided should be specified, to facilitate theory reinterpretation 
   beyond the necessary model-independent limits that 
   should be provided by all LHC Dark Matter searches. 
-\item The forum should standardize the event generator implementation
-  of the simplified models and harmonize other common technical
-  details as far as practical. It
+\item The forum should recommend the use of the state of the art calculations
+  for these benchmark models. Such a recommendation will aid the  
+  standardization the event generator implementation
+  of the simplified models and the harmonization of other common technical
+  details as far as practical for early Run-2 LHC analyses. It
   would be desirable to have a common choice of leading order (LO) and 
   next-to-leading order (NLO) matrix elements corresponding to the state of the art calculations, 
   parton shower matching and merging, factorization and renormalization
@@ -119,16 +122,16 @@ important to restrict the scope and timescale to the following:
   interpretations.
 \item The forum should prepare a report summarizing these items,
   suitable both as a reference for the internal ATLAS and CMS
-  audiences and as an explanation of Run-2 benchmarks for theory and non-collider
+  audiences and as an explanation of early Run-2 LHC benchmark models for theory and non-collider
   readers. This report represents the views of its endorsers, as participants of the forum.
 \end{enumerate}
 
 \section{Grounding Assumptions}
 
 We assume that interactions exist between Standard Model hadrons
-and the particles that constitute cosmological dark matter. If this
-is not the case, then proton collisions will not produce dark matter
-particles, and dark matter will not scatter off nuclei in direct
+and the particles that constitute cosmological Dark Matter. If this
+is not the case, then proton collisions will not produce Dark Matter
+particles, and Dark Matter will not scatter off nuclei in direct
 detection experiments.
 
 The Dark Matter itself is assumed to be a single particle, a Dirac
@@ -136,7 +139,7 @@ fermion WIMP, stable on collider timescales and non-interacting with
 the detector.  
 The former assumption is reductionistic.
 The rich particle content of the Standard Model is circumstantial evidence that
-the dark matter sector, which constitutes five times as much of the
+the Dark Matter sector, which constitutes five times as much of the
 mass of the universe, may be more complex than a single particle or a
 single interaction. But, as was often the case in the discoveries of
 the SM, here only one mediator and one search channel might play a
@@ -144,9 +147,9 @@ dominant role in the opening stages of an LHC discovery. The latter
 assumption focuses our work on early LHC searches, where small
 kinematic differences between models will not matter in a discovery
 scenario, and with the imminent re-start of the LHC our report relies
-heavily on a large body of existing theoretical work which assumed Dirac fermionic dark matter. 
+heavily on a large body of existing theoretical work which assumed Dirac fermionic Dark Matter. 
 
-Different spins of dark matter particles will typically
+Different spins of Dark Matter particles will typically
 give similar results. Some exceptions exist. For example, the choice of Majorana fermions forbids some
 processes that are allowed for Dirac fermions~\cite{Goodman:2010yf}.
 Aside from these, adjusting the choice of Dirac or Majorana fermions or scalars will produce only minor changes
@@ -154,7 +157,7 @@ in the kinematic distributions of the visible particle and is expected to have l
 on cut-and-count\sidenote{Cut-and-count refers to an analysis
 that applies a certain event selection and checks the inclusive number of events which pass. 
 This is to be contrasted with a shape analysis, which compares the distribution of events.} analysis. Thus the choice of Dirac
-fermion dark matter should be sufficient as benchmarks for the upcoming Run-2 searches. 
+fermion Dark Matter should be sufficient as benchmarks for the upcoming Run-2 searches. 
 
 % Should LHC searches uncover a signal consistent with these models, a much more exhaustive Nevertheless, a more complete
 % set of models will certainly be required upon a discovery. See
@@ -168,13 +171,13 @@ matter, while at the same time discovery of an anomalous and
 annually-modulated signal in a direct-detection experiment would leave
 unanswered many questions about the nature of the interaction that
 could be resolved by the simultaneous discovery of a new mediator
-particle.  Collider, direct, and indirect detection searches provide
+particle. Collider, direct, and indirect detection searches provide
 complementary ways to approach this problem~\cite{Bauer:2013ihz}, and it is in this spirit
 that much of our focus is on the mediator.
 
 We systematically explore the basic possibilities for
 mediators of various possible spins and couplings.
-All models considered are assumed to produce a signature with pairs of dark matter particles.
+All models considered are assumed to produce a signature with pairs of Dark Matter particles.
 Though more varied and
 interesting possibilities are added to the literature almost daily,
 these basic building blocks account for much of the physics studied at
@@ -182,7 +185,7 @@ hadron colliders in the past three decades.
 
 We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,D'Ambrosio:2002ex} applies to the
 models included in this report. This means that the flavor structure of the
-couplings between dark matter and ordinary particles follows the same
+couplings between Dark Matter and ordinary particles follows the same
 structure as the Standard Model. This choice is simple, since no
 additional theory of flavor is required, beyond what is already
 present in the SM, and it provides a mechanism to ensure that the
@@ -190,7 +193,8 @@ models do not violate flavor constraints.  As a consequence, \spinzero
 resonances must have couplings to fermions proportional to the SM Higgs couplings. 
 Flavor-safe models can still be constructed beyond the MFV
 assumption, for example ~\cite{Agrawal:2014aoa}, and deserve further study.
-%cite Dolan:2014ska? Also DM@LHC report, if out in time. 
+For a discussion of MFV in the context of the simplified models
+included in this report, see Ref.~\cite{DMatLHCProceedings}.
 
 In the parameter scan for the models considered in this report, we make the
 assumption of a minimal decay width for the particles mediating the
@@ -218,91 +222,101 @@ mediator particles), it is a starting point to prepare a set of
 distinct but complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
-\section{Choices of benchmarks considered in this report and parameter scan}
+\section{Choices of benchmarks considered in this report and parameter scans}
 
 %We have already said this above. 
 %carts in front of the horse?
-%The weakness of the interaction between dark matter and visible matter is explained
+%The weakness of the interaction between Dark Matter and visible matter is explained
 %by assuming a mediating force or particle that indirectly connects the
 %two. In the EFT approach, the mass scale of the mediator is assumed
 %to be large compared to the typical momentum involved in the production
-%of dark matter.  
+%of Dark Matter.  
 Contact interaction operators have been outlined as basis set of theoretical
 building blocks representing possible types of interactions between SM and DM particles
 in~\cite{Goodman:2010ku}. The approach followed by LHC searches (see e.g. Refs.~\cite{Khachatryan:2014rra,Aad:2015zva} 
-for the most recent jet+\MET{} Run-1 searches with the 8 TeV dataset) 
+for recent jet+\MET{} Run-1 searches with the 8 TeV dataset) 
 so far has been to simulate only a prioritized set of the possible operators with distinct kinematics
 for the interpretation of the constraints obtained, and provide results that may be reinterpreted in terms of the other operators.
 This report intends to follow this strategy, firstly focusing on simplified models that allow the exploration 
 of scenarios where the mediating scale is not as large.  In the limit of large mediator mass, the simplified models map onto
 the EFT operators.
 %because the EFT approach, viable for the
-%other types of dark matter searches, breaks down at the LHC. Another
-%way of viewing this problem is that any BSM model of dark matter
-%requires at least two particles: a dark matter candidate and a
-%mediator of the interaction between the dark matter and the Standard
+%other types of Dark Matter searches, breaks down at the LHC. Another
+%way of viewing this problem is that any BSM model of Dark Matter
+%requires at least two particles: a Dark Matter candidate and a
+%mediator of the interaction between the Dark Matter and the Standard
 %Model.
 Secondly, this report considers specific EFT benchmarks 
 whenever neither a simplified model completion 
-nor other simplified models yielding similar kinematic distributions are available\sidenote{and implemented in one of the event generators used by both collaborations.}. 
-This is the case for dimension-5 or dimension-7\sidenote{For dim-7 operators of 
-DM coupling to gauge bosons, there are simplified models in the literature, but they need more ingredients than just the usual mediator and the DM. For example, consider the DM coupling to a SM Higgs singlet mediator, $S$, whose vaccuum expectatino value gives mass to a heavy vector-like fermion, $F$, which also carries SM quantum numbers. The $F$ triangle graph then couples $S$ to the SM gauge boson pair. Thus $\chi \bar{\chi} \rightarrow S \rightarrow F\bar{F} \text{(loop)} \rightarrow G G$ as required.} operators with direct 
-Dark Matter-electroweak boson couplings. 
+nor other simplified models yielding similar kinematic distributions are available 
+and implemented in one of the event generators used by both collaborations. 
+This is the case for dimension-5 or dimension-7 operators with direct 
+DM-electroweak boson couplings \sidenote{An example of a dimension-5 operator for scalar
+DM is described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
+Dimension-7 operators of DM coupling to gauge bosons exist in the literature, but they require a larger particle spectrum
+with respect to the models studied in this report.}.
+%For example, consider the DM coupling to a SM Higgs singlet mediator, $S$, whose vacuum expectation value gives mass to a heavy vector-like fermion, 
+%$F$, which also carries SM quantum numbers. The $F$ triangle graph then couples $S$ to the SM gauge boson pair. 
+%Thus $\chi \bar{\chi} \rightarrow S \rightarrow F\bar{F} \text{(loop)} \rightarrow G G$ as required.
 Considering these models as separate experimental benchmarks 
 will allow to target new signal regions and help validate the 
 contact interaction limit of new simplified models 
 developed to complete these specific operators. 
-
-In all cases, experimental searches should deliver 
-results that are independent from the specific benchmark tested. 
-Furthermore, it should be possible to map results from simplified models to contact operators,
-in the high mediator mass limit. Results from EFT benchmarks should include the condition that
+%CD: this sentence does not fit here anymore
+%It should also be possible to map results from simplified models to contact operators,
+%in the high mediator mass limit. 
+Results from these EFT benchmarks should include the condition that
 the momentum transfer does not probe the scale of the interaction; whenever there is no model
 that allows a direct mapping between these two quantities, various options should be tested to 
 ensure a given fraction of events within the range of applicability of the EFT approach.
+Experimental searches should in any case deliver 
+results that are independent from the specific benchmark tested, such as fiducial cross-sections that
+are excluded in a given signal region. 
 
-This report does not quantitatively consider constraints 
-'external' to the MET+X analyses coming from
-the LHC experiments themselves, such as searches for mediator decays,
-when choosing the points to be scanned in the parameter space of the models. 
+When choosing the points to be scanned in the parameter space of the models,
+this report does not quantitatively consider constraints that are 
+external to the MET+X analyses. This is the case also for results from LHC experiments
+searching for mediator decays. 
 The main reason for not doing so in this report 
 is the difficulty of incorporating these constraints in a rigorous quantitative way within
 the timescale of the Forum. However, even if the parameter scans
 and the searches are not optimized with those constraints in mind, 
 we intend to make all information available to the community to exploit
-the unique sensitivity of colliders to all possible Dark Matter signatures. 
+the unique sensitivity of colliders to all possible DM signatures. 
 
-\section{Structure of this report}
+\section{Structure of this report and dissemination of results}
 
 Chapter \ref{subsec:MonojetLikeModels} of the report is dedicated to simplified
 models with radiation of a hard object either from the initial state
 or from the mediator. These models produce primarily monojet signatures, 
 but should be considered for all \MET{}+X searches.
-%Chapter~\ref{subsec:DMHFModels} describes the specific details of the general models
-%for final states including heavy flavor quarks, leaving the implementation
-%details to appendix~\ref{app:TTBar_Xsecs}.  
-Chapter~\ref{subsec:EWSpecificModels} contains the benchmark model
-recommendations and choices for final states specifically containing an electroweak 
+Chapter~\ref{subsec:EWSpecificModels} contains studies on the benchmark models
+for final states specifically containing an electroweak 
 boson ($W/Z/\gamma/H$). In this case, both 
 simplified models leading to mono-boson signatures
 and contact interaction operators are considered. 
-Details of the implementation of the simplified models in
+Details of the state of the art calculations and on the implementation of the simplified models in
 Monte Carlo generators are provided in
 Chapter \ref{app:MonojetLikeModels_Appendix}.
 Chapter \ref{sec:EFTValidity} is devoted to the treatment of the presentation of results for the benchmark
-models from contact interaction operators. Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. Chapter \ref{chapter:conclusions} concludes the report.
+models from contact interaction operators. 
+Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. 
+Chapter \ref{chapter:conclusions} concludes the report.
 
-The technical implementation and further models that can be studied
-beyond early searches are described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
+Further models that could be studied
+beyond early searches and their implementation are described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
 For these models, either the implementation could not be fully developed by the time of this report,
 or some of the grounding assumptions were not fully met.  
 Some of these models have been used in previous ATLAS and CMS analyses and discussed thoroughly within the Forum. 
 They are therefore worth considering for further studies and for Run-2 searches, since they lead to unique \MET{}+X signatures 
-that are not produced by any other of the models included in this report. 
-
+that are not shared by any other of the models included in this report. 
 Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
 should be included in the results of experimental searches to allow for further reinterpretation. 
-%The Appendices also collect information about the implementation of the
-%models in event generator tools, as well as tables of expected cross sections.
-%%This could be saved for monotop
+
+It is crucial for the success of the work of this Forum that these studies can be employed as cross-check
+and reference to the theoretical and experimental community interested in early Run-2 searches. 
+For this reason, model files, parameter cards, and cross-sections for the models considered in these studies 
+are publicly available. The SVN repository of the Forum ~\cite{ForumSVN} contains the models and parameter files
+necessary to reproduce the studies within this report. Details and cross-sections for these models, 
+as a function of their parameters, will be published on HEPData~\cite{HEPData}. 
 
